# vsrun

./: .gitignore  CMakeLists.txt
.vim/: coc-settings.json
src/: visualstudio.cc  visualstudio.h  vs-install-dir.cc  vsrun.cc
tests/: CMakeLists.txt  test1.cc
